# json

./: CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_and_test.yaml  release.yaml
include/: Array.h  JSON.h  Object.h  Variant.h
src/: Array.cpp  JSON.cpp  Object.cpp  Variant.cpp
tests/: CMakeLists.txt  tArray.cpp  tJSON.cpp  tObject.cpp  tVariant.cpp  validTypes.json
